--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>lambda-mvn-cdk-infra</artifactId>
     <parent>
-        <groupId>dev.kerrywilson.aws</groupId>
-        <artifactId>lambda-mvn-cdk</artifactId>
+        <groupId>com.mycompany.myapp</groupId>
+        <artifactId>my-app</artifactId>
         <version>0.1</version>
     </parent>
     <properties>
