--- a/infra/pom.xml
+++ b/infra/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>lambda</artifactId>
             <version>${cdk.version}</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>dynamodb</artifactId>
+            <version>${cdk.version}</version>
+        </dependency>
     </dependencies>
 </project>
