--- a/pom.xml
+++ b/pom.xml
@@ -75,12 +75,19 @@
             <artifactId>log4j-api</artifactId>
             <version>2.17.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+        <!-- https://mvnrepository.com/artifact/com.google.dagger/dagger -->
         <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>5.0.1</version>
+            <groupId>com.google.dagger</groupId>
+            <artifactId>dagger</artifactId>
+            <version>2.40.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.dagger/dagger-compiler -->
+        <dependency>
+            <groupId>com.google.dagger</groupId>
+            <artifactId>dagger-compiler</artifactId>
+            <version>2.40.5</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
